Add default JVM args to distribution